[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
mongodb = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "1.0"
serde_derive = "1.0"